Initialize more firebase settings Add BaseActivity class for others to extend from

--- a/Android-WardrobeApp/app/src/main/res/values/strings.xml
+++ b/Android-WardrobeApp/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="signup_email">Email</string>
     <string name="signup_password">Password</string>
     <string name="sign_up">Sign Up</string>
+    <!-- Menu-related strings -->
+    <string name="menu_sign_out">Sign Out</string>
 </resources>
