--- a/Android-WardrobeApp/app/src/main/res/values/strings.xml
+++ b/Android-WardrobeApp/app/src/main/res/values/strings.xml
@@ -23,4 +23,15 @@
     <string name="sign_up">Sign Up</string>
     <!-- Menu-related strings -->
     <string name="menu_sign_out">Sign Out</string>
+    <string name="email1">Email</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log in</string>
+    <string name="sign_up1">Sign up</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="name">Name:</string>
+    <string name="gender">Gender:</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="height">Height:</string>
+    <string name="weight">Weight:</string>
 </resources>
