--- a/Android-WardrobeApp/app/src/main/res/values/strings.xml
+++ b/Android-WardrobeApp/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="signup_password">Password</string>
     <string name="label_sign_in">Sign In</string>
     <string name="label_sign_up">Sign Up</string>
+
     <!-- Menu-related strings -->
     <string name="menu_sign_out">Sign Out</string>
     <string name="email1">Email</string>
@@ -30,6 +31,7 @@
     <string name="log_in">Log in</string>
     <string name="sign_up1">Sign up</string>
     <string name="forgot_password">Forgot password?</string>
+
     <!-- Sign-Up Profile -->
     <string name="name">Name:</string>
     <string name="gender">Gender:</string>
@@ -47,4 +49,21 @@
     <string name="e_mails">E-mail*</string>
     <string name="passwords">Password*</string>
     <string name="confirm_passwords">Confirm password*</string>
+
+    <!-- Weather related String -->
+    <string name="change_city">Change city</string>
+
+    <!-- Put your own APP ID here -->
+    <string name="open_weather_maps_app_id">3c28a0394d473bfc20784d5cca0f0f48</string>
+
+    <string name="weather_sunny">&#xf00d;</string>
+    <string name="weather_clear_night">&#xf02e;</string>
+    <string name="weather_foggy">&#xf014;</string>
+    <string name="weather_cloudy">&#xf013;</string>
+    <string name="weather_rainy">&#xf019;</string>
+    <string name="weather_snowy">&#xf01b;</string>
+    <string name="weather_thunder">&#xf01e;</string>
+    <string name="weather_drizzle">&#xf01c;</string>
+
+    <string name="place_not_found">Sorry, no weather data found.</string>
 </resources>
